Added endpoint and switched to Moscow timezone
