# internal/handlers/http/v1/handler_routes.go
@@ -14,6 +14,7 @@ const version = "1.0.0"
 func (h *Handler) AddRoutes(router *mux.Router) {
 
 	router.Handle("/{isu}/ical", h.handlerFor("GET", "/{isu}/ical")).Methods("GET")
+	router.Handle("/{isu}/schedule", h.handlerFor("GET", "/{isu}/schedule")).Methods("GET")
 	router.Handle("/health", h.handlerFor("GET", "/health")).Methods("GET")
 	router.Handle("/subscribe", h.handlerFor("POST", "/subscribe")).Methods("POST")
 
