# internal/handlers/http/v1/restapi/operations/schedule/get_schedule_parameters.go
@@ -1,0 +1,77 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package schedule
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"net/http"
+
+	"github.com/go-openapi/errors"
+	"github.com/go-openapi/runtime/middleware"
+	"github.com/go-openapi/strfmt"
+	"github.com/go-openapi/swag"
+)
+
+// NewGetScheduleParams creates a new GetScheduleParams object
+//
+// There are no default values defined in the spec.
+func NewGetScheduleParams() GetScheduleParams {
+
+	return GetScheduleParams{}
+}
+
+// GetScheduleParams contains all the bound params for the get schedule operation
+// typically these are obtained from a http.Request
+//
+// swagger:parameters getSchedule
+type GetScheduleParams struct {
+
+	// HTTP Request Object
+	HTTPRequest *http.Request `json:"-"`
+
+	/*ISU of the user.
+	  Required: true
+	  In: path
+	*/
+	Isu int64
+}
+
+// BindRequest both binds and validates a request, it assumes that complex things implement a Validatable(strfmt.Registry) error interface
+// for simple values it will use straight method calls.
+//
+// To ensure default values, the struct must have been initialized with NewGetScheduleParams() beforehand.
+func (o *GetScheduleParams) BindRequest(r *http.Request, route *middleware.MatchedRoute) error {
+	var res []error
+
+	o.HTTPRequest = r
+
+	rIsu, rhkIsu, _ := route.Params.GetOK("isu")
+	if err := o.bindIsu(rIsu, rhkIsu, route.Formats); err != nil {
+		res = append(res, err)
+	}
+	if len(res) > 0 {
+		return errors.CompositeValidationError(res...)
+	}
+	return nil
+}
+
+// bindIsu binds and validates parameter Isu from path.
+func (o *GetScheduleParams) bindIsu(rawData []string, hasKey bool, formats strfmt.Registry) error {
+	var raw string
+	if len(rawData) > 0 {
+		raw = rawData[len(rawData)-1]
+	}
+
+	// Required: true
+	// Parameter is provided by construction from the route
+
+	value, err := swag.ConvertInt64(raw)
+	if err != nil {
+		return errors.InvalidType("isu", "path", "int64", raw)
+	}
+	o.Isu = value
+
+	return nil
+}
