# internal/handlers/http/v1/restapi/operations/schedule/get_schedule_responses.go
@@ -1,0 +1,152 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package schedule
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"net/http"
+
+	"github.com/go-openapi/runtime"
+
+	"github.com/hexarchy/itmo-calendar/internal/handlers/http/v1/models"
+)
+
+// GetScheduleOKCode is the HTTP code returned for type GetScheduleOK
+const GetScheduleOKCode int = 200
+
+/*
+GetScheduleOK User's schedule.
+
+swagger:response getScheduleOK
+*/
+type GetScheduleOK struct {
+
+	/*
+	  In: Body
+	*/
+	Payload []*models.ScheduleItem `json:"body,omitempty"`
+}
+
+// NewGetScheduleOK creates GetScheduleOK with default headers values
+func NewGetScheduleOK() *GetScheduleOK {
+
+	return &GetScheduleOK{}
+}
+
+// WithPayload adds the payload to the get schedule o k response
+func (o *GetScheduleOK) WithPayload(payload []*models.ScheduleItem) *GetScheduleOK {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the get schedule o k response
+func (o *GetScheduleOK) SetPayload(payload []*models.ScheduleItem) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *GetScheduleOK) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(200)
+	payload := o.Payload
+	if payload == nil {
+		// return empty array
+		payload = make([]*models.ScheduleItem, 0, 50)
+	}
+
+	if err := producer.Produce(rw, payload); err != nil {
+		panic(err) // let the recovery middleware deal with this
+	}
+}
+
+// GetScheduleNotFoundCode is the HTTP code returned for type GetScheduleNotFound
+const GetScheduleNotFoundCode int = 404
+
+/*
+GetScheduleNotFound Not found.
+
+swagger:response getScheduleNotFound
+*/
+type GetScheduleNotFound struct {
+
+	/*
+	  In: Body
+	*/
+	Payload *models.Error `json:"body,omitempty"`
+}
+
+// NewGetScheduleNotFound creates GetScheduleNotFound with default headers values
+func NewGetScheduleNotFound() *GetScheduleNotFound {
+
+	return &GetScheduleNotFound{}
+}
+
+// WithPayload adds the payload to the get schedule not found response
+func (o *GetScheduleNotFound) WithPayload(payload *models.Error) *GetScheduleNotFound {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the get schedule not found response
+func (o *GetScheduleNotFound) SetPayload(payload *models.Error) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *GetScheduleNotFound) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(404)
+	if o.Payload != nil {
+		payload := o.Payload
+		if err := producer.Produce(rw, payload); err != nil {
+			panic(err) // let the recovery middleware deal with this
+		}
+	}
+}
+
+// GetScheduleInternalServerErrorCode is the HTTP code returned for type GetScheduleInternalServerError
+const GetScheduleInternalServerErrorCode int = 500
+
+/*
+GetScheduleInternalServerError Internal server error.
+
+swagger:response getScheduleInternalServerError
+*/
+type GetScheduleInternalServerError struct {
+
+	/*
+	  In: Body
+	*/
+	Payload *models.Error `json:"body,omitempty"`
+}
+
+// NewGetScheduleInternalServerError creates GetScheduleInternalServerError with default headers values
+func NewGetScheduleInternalServerError() *GetScheduleInternalServerError {
+
+	return &GetScheduleInternalServerError{}
+}
+
+// WithPayload adds the payload to the get schedule internal server error response
+func (o *GetScheduleInternalServerError) WithPayload(payload *models.Error) *GetScheduleInternalServerError {
+	o.Payload = payload
+	return o
+}
+
+// SetPayload sets the payload to the get schedule internal server error response
+func (o *GetScheduleInternalServerError) SetPayload(payload *models.Error) {
+	o.Payload = payload
+}
+
+// WriteResponse to the client
+func (o *GetScheduleInternalServerError) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
+
+	rw.WriteHeader(500)
+	if o.Payload != nil {
+		payload := o.Payload
+		if err := producer.Produce(rw, payload); err != nil {
+			panic(err) // let the recovery middleware deal with this
+		}
+	}
+}
